02-eks/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asiayo
  labels:
    app.kubernetes.io/part-of: asiayo
