02-eks/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: asiayo
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/part-of: asiayo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
