02-eks/k8s/mysql-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless
  namespace: asiayo
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: asiayo
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
      protocol: TCP
